[gd_scene load_steps=12 format=3 uid="uid://bqjfdabrxujp7"]

[ext_resource type="Script" path="res://Scripts/MonologueControl.gd" id="1_r00lk"]
[ext_resource type="PackedScene" uid="uid://cv3ej5ymwd0y3" path="res://Objects/SubComponents/Header.tscn" id="2_u4ama"]
[ext_resource type="Texture2D" uid="uid://c7vdr4e0mxst6" path="res://Assets/Icons/close_icon.png" id="5_f42wd"]
[ext_resource type="Texture2D" uid="uid://duc8w81evfnqw" path="res://Assets/Icons/NodesIcons/DiceRoll.svg" id="5_qjglw"]
[ext_resource type="Texture2D" uid="uid://bmfs6iest7723" path="res://Assets/Icons/NodesIcons/Link.svg" id="6_gcn4v"]
[ext_resource type="Texture2D" uid="uid://bsfr18fogqxnt" path="res://Assets/Icons/NodesIcons/Condition.svg" id="7_nh0w0"]
[ext_resource type="Texture2D" uid="uid://cii2dk8aqnx3m" path="res://Assets/Icons/NodesIcons/Cog.svg" id="8_hffb8"]
[ext_resource type="Texture2D" uid="uid://kqhi8rimv1go" path="res://Assets/Icons/NodesIcons/Exit.svg" id="8_hudw3"]
[ext_resource type="PackedScene" uid="uid://bqqcww601rcx5" path="res://Objects/Windows/WelcomeWindow.tscn" id="8_6u52p"]
[ext_resource type="Script" path="res://Scripts/SidePanelNodes/SidePanelNodeDetails.gd" id="9_cxmnj"]
[ext_resource type="PackedScene" uid="uid://cvjfcgqktlyc2" path="res://Objects/SubComponents/GraphEditSwitcher.tscn" id="11_ktgpb"]
[ext_resource type="Texture2D" uid="uid://dm2u0xqmmcorj" path="res://Assets/Icons/copy.png" id="14_8lefg"]
[ext_resource type="Texture2D" uid="uid://dhlu3mvdkvea6" path="res://Assets/Icons/cursor.svg" id="15_dc63e"]
[ext_resource type="Texture2D" uid="uid://kk5em170gn2b" path="res://Assets/Icons/UI/ui_close.svg" id="15_dv5d5"]
[ext_resource type="Texture2D" uid="uid://b272tbdmvxj20" path="res://Assets/Icons/play.svg" id="15_hn16p"]
[ext_resource type="Texture2D" uid="uid://faci8gjgsxub" path="res://Assets/Icons/file_plus.svg" id="16_x1vtb"]
[ext_resource type="Texture2D" uid="uid://cu75pg7vsf7qi" path="res://Assets/Icons/hand.svg" id="16_yc7gx"]
[ext_resource type="Theme" uid="uid://budfhk1hudcfj" path="res://Assets/MainTheme.tres" id="17_2g74o"]
[ext_resource type="PackedScene" uid="uid://dspmmme0jspdx" path="res://Objects/SubComponents/CloseButton.tscn" id="17_af4y3"]
[ext_resource type="Texture2D" uid="uid://bbw07aw88fo0p" path="res://Assets/Icons/folder_search.svg" id="17_g5nwh"]
[ext_resource type="PackedScene" uid="uid://cmpsaafag7cwl" path="res://Objects/UI/GraphNodePicker.tscn" id="19_myvjg"]
[ext_resource type="PackedScene" uid="uid://djcfm0pl15x87" path="res://Objects/SubComponents/GraphNodeSelector.tscn" id="15_v6y8q"]
[ext_resource type="Script" path="res://Scripts/GlobalFileDialog.gd" id="20_2dvte"]
[ext_resource type="Texture2D" uid="uid://bw473utd8l2a3" path="res://Assets/Cover/Banner.png" id="21_xtx4h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3npb4"]
content_margin_left = 5.0
content_margin_top = 0.0
content_margin_right = 5.0
content_margin_bottom = 0.0
bg_color = Color(0.243137, 0.278431, 0.419608, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
corner_detail = 12

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dg27m"]
content_margin_left = 5.0
content_margin_top = 0.0
content_margin_right = 5.0
content_margin_bottom = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_knd4m"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.0862745, 0.101961, 0.12549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r02mm"]
bg_color = Color(0.619608, 0.901961, 0.482353, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="LabelSettings" id="LabelSettings_gptd3"]
line_spacing = 0.0
font_size = 12
font_color = Color(0.647059, 0.858824, 0.505882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tyw4k"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.768627, 0.180392, 0.25098, 1)

[sub_resource type="GDScript" id="GDScript_5beyj"]
script/source = "extends Button


func _on_pressed() -> void:
	GlobalSignal.emit(\"select_new_node\")
"

[sub_resource type="GDScript" id="GDScript_lenro"]
script/source = "extends Button


func _on_pressed() -> void:
	GlobalSignal.emit(\"test_trigger\")
"

[sub_resource type="LabelSettings" id="LabelSettings_1l82f"]
font_color = Color(0.572549, 0.572549, 0.572549, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7mcdy"]
font_color = Color(0.423529, 0.423529, 0.423529, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ehqk"]
bg_color = Color(0.129412, 0.14902, 0.180392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_28b4a"]
content_margin_left = 7.0
content_margin_right = 7.0
bg_color = Color(0.768627, 0.180392, 0.25098, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="MonologueControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_r00lk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Header" parent="MarginContainer/MainContainer" instance=ExtResource("2_u4ama")]
unique_name_in_owner = true
layout_mode = 2

[node name="GraphEditsArea" type="Control" parent="MarginContainer/MainContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="GraphEditSwitcher" parent="MarginContainer/MainContainer/GraphEditsArea" node_paths=PackedStringArray("side_panel") instance=ExtResource("11_ktgpb")]
unique_name_in_owner = true
layout_mode = 1
side_panel = NodePath("../MarginContainer/SidePanelNodeDetails")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MainContainer/GraphEditsArea"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.629
anchor_top = 0.035
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Default" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/GraphEdits" instance=ExtResource("12_5uhsv")]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.712
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -7.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="SidePanelNodeDetails" type="PanelContainer" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("9_cxmnj")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/MarginContainer/SidePanelNodeDetails"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/MarginContainer/SidePanelNodeDetails/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="VBoxContainer" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/MarginContainer/SidePanelNodeDetails/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/MarginContainer/SidePanelNodeDetails/MarginContainer/ScrollContainer/PanelContainer"]
layout_mode = 2

[node name="LineEditID" type="LineEdit" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/MarginContainer/SidePanelNodeDetails/MarginContainer/ScrollContainer/PanelContainer/HBoxContainer"]
clip_children = 2
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "id"
right_icon = ExtResource("14_8lefg")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/MarginContainer/SidePanelNodeDetails/MarginContainer/ScrollContainer/PanelContainer/HBoxContainer/LineEditID"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="Button" type="Button" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/MarginContainer/SidePanelNodeDetails/MarginContainer/ScrollContainer/PanelContainer/HBoxContainer/LineEditID/HBoxContainer"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
flat = true

[node name="RFHButton" type="TextureButton" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/MarginContainer/SidePanelNodeDetails/MarginContainer/ScrollContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("15_hn16p")
stretch_mode = 3

[node name="VSeparator" type="VSeparator" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/MarginContainer/SidePanelNodeDetails/MarginContainer/ScrollContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/MarginContainer/SidePanelNodeDetails/MarginContainer/ScrollContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("15_dv5d5")
stretch_mode = 3

[node name="ToolBarContainer" type="MarginContainer" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/ToolBarContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/ToolBarContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ToolBar" type="PanelContainer" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/ToolBarContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/ToolBarContainer/VBoxContainer/CenterContainer/ToolBar"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="CursorButton" type="Button" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/ToolBarContainer/VBoxContainer/CenterContainer/ToolBar/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
flat = true

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/ToolBarContainer/VBoxContainer/CenterContainer/ToolBar/HBoxContainer/CursorButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/ToolBarContainer/VBoxContainer/CenterContainer/ToolBar/HBoxContainer/CursorButton/CenterContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("15_dc63e")
expand_mode = 3
stretch_mode = 5

[node name="VSeparator3" type="VSeparator" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/ToolBarContainer/VBoxContainer/CenterContainer/ToolBar/HBoxContainer"]
layout_mode = 2

[node name="HandButton" type="Button" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/ToolBarContainer/VBoxContainer/CenterContainer/ToolBar/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
flat = true

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/ToolBarContainer/VBoxContainer/CenterContainer/ToolBar/HBoxContainer/HandButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.00318988

[node name="TextureRect" type="TextureRect" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/ToolBarContainer/VBoxContainer/CenterContainer/ToolBar/HBoxContainer/HandButton/CenterContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("16_yc7gx")
expand_mode = 3
stretch_mode = 5

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/ToolBarContainer/VBoxContainer/CenterContainer/ToolBar/HBoxContainer"]
layout_mode = 2

[node name="AddNodeBtn" type="Button" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/ToolBarContainer/VBoxContainer/CenterContainer/ToolBar/HBoxContainer"]
layout_mode = 2
text = "Add a node..."
script = SubResource("GDScript_5beyj")

[node name="VSeparator4" type="VSeparator" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/ToolBarContainer/VBoxContainer/CenterContainer/ToolBar/HBoxContainer"]
layout_mode = 2

[node name="RunButton" type="Button" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/ToolBarContainer/VBoxContainer/CenterContainer/ToolBar/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
flat = true
script = SubResource("GDScript_lenro")

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/ToolBarContainer/VBoxContainer/CenterContainer/ToolBar/HBoxContainer/RunButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.00318988

[node name="TextureRect" type="TextureRect" parent="MarginContainer/MainContainer/GraphEditsArea/VBoxContainer/GraphEditZone/ToolBarContainer/VBoxContainer/CenterContainer/ToolBar/HBoxContainer/RunButton/CenterContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
tooltip_text = "Run the project from the RootNode."
texture = ExtResource("15_hn16p")
expand_mode = 3
stretch_mode = 5

[node name="NoInteractions" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.196078)

[node name="GraphNodeSelector" parent="." instance=ExtResource("15_v6y8q")]

[node name="WelcomeWindow" parent="." instance=ExtResource("8_6u52p")]

[node name="FileDialog" type="FileDialog" parent="."]
mode_overrides_title = false
access = 2
use_native_dialog = true
script = ExtResource("20_2dvte")

[connection signal="text_changed" from="MarginContainer/MainContainer/GraphEditsArea/MarginContainer/SidePanelNodeDetails/MarginContainer/ScrollContainer/PanelContainer/HBoxContainer/LineEditID" to="MarginContainer/MainContainer/GraphEditsArea/MarginContainer/SidePanelNodeDetails" method="_on_line_edit_id_text_changed"]
[connection signal="pressed" from="MarginContainer/MainContainer/GraphEditsArea/MarginContainer/SidePanelNodeDetails/MarginContainer/ScrollContainer/PanelContainer/HBoxContainer/CopyIDBtn" to="MarginContainer/MainContainer/GraphEditsArea/MarginContainer/SidePanelNodeDetails" method="_on_id_copy_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/GraphEditsArea/MarginContainer/SidePanelNodeDetails/MarginContainer/ScrollContainer/PanelContainer/HBoxContainer/TFHBtn" to="MarginContainer/MainContainer/GraphEditsArea/MarginContainer/SidePanelNodeDetails" method="_on_tfh_btn_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/GraphEditsArea/MarginContainer/SidePanelNodeDetails/MarginContainer/ScrollContainer/PanelContainer/HBoxContainer/TextureButton" to="MarginContainer/MainContainer/GraphEditsArea/MarginContainer/SidePanelNodeDetails" method="_on_texture_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="FileDialog" method="_on_file_selected"]
